--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,7 @@ body{
 }
 .cMail p{
     margin-left: 1em;
+	font-size: 1.5em;
 }
 .footer{
     padding: 2em;
@@ -139,4 +140,11 @@ body{
 }
 #lastH{
     text-align: center;
+}
+#footP{
+    text-align: center;
+}
+#footP a{
+    font-size: 2em;
+    color:#00f47c;
 }
